@@ -1,3 +1,7 @@
+Feb 23, 2006
+
+  * Added http_session.pl and http:request_expansion/2 hook.
+
 Feb 16, 2006
 
   * Added http_current_request/1 to get access to the currently executing
